[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-encrypt"
version = "1.0.0"
description = "A hybrid encryption library combining RSA-2048 and AES-256 for secure message encryption and decryption"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Vamsi Krishna", email = "arjunkumar.horizon@gmail.com" }
]
keywords = [
    "encryption",
    "decryption",
    "hybrid-encryption",
    "rsa",
    "aes",
    "aes-256",
    "cryptography",
    "security",
    "crypto",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "rsa>=4.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
hybrid-encrypt = "hybrid_encrypt.cli:main"

[project.urls]
Homepage = "https://github.com/raptor7197/hybrid-encrypt"
Repository = "https://github.com/raptor7197/hybrid-encrypt"
Issues = "https://github.com/raptor7197/hybrid-encrypt/issues"
Changelog = "https://github.com/raptor7197/hybrid-encrypt/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_encrypt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["hybrid_encrypt"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
